--- a/foundations/intro-to-css/01-css-methods/styles.css
+++ b/foundations/intro-to-css/01-css-methods/styles.css
@@ -1,4 +1,9 @@
 #external {
     color: aliceblue;
     background-color: darkred;
+
+    font-size: 50px;
+    font-weight: bold;
+
+    text-align: center;
 }
