minha versao apos ver a solucao do projeto. errei algumas coisas.

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -11,7 +11,7 @@ body {
 
 * {
   padding: 8px;
-  margin: 8px;
+  margin-bottom: 8px;
 }
 
 .title {
@@ -27,9 +27,7 @@ body {
   background: #e3f4ff;
 }
 
-.bigbutton {
+button {
   display: block;
-  margin-left: 135px;
-  background: white;
-  border: 1px solid #eee;
+  margin: 0 auto;
 }
