--- a/foundations/flex/01-flex-center/style.css
+++ b/foundations/flex/01-flex-center/style.css
@@ -1,8 +1,12 @@
 .container {
+  display: flex;
   background: dodgerblue;
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+
+  justify-content: center;
+  align-items: center;
 }
 
 .box {
