--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
-.header  {
+.header  {;
   font-family: monospace;
   background: papayawhip;
+
+  display: flex;
+
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -16,9 +21,15 @@ ul {
   list-style-type: none;
 }
 
+.header ul li {
+  display: inline-block;
+  order: 1;
+  background: white;
+  flex: auto;
+}
+
 a {
   font-size: 22px;
-  background: white;
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
