--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -12,7 +12,7 @@
   font-size: 48px;
   font-weight: 900;
   color: tomato;
-  background: white;
+  background: blue;
   padding: 4px 32px;
 }
 
@@ -23,7 +23,6 @@ ul {
 
 .header ul li {
   display: inline-block;
-  order: 1;
   background: white;
   flex: auto;
 }
