--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,13 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+
+  /*temporario*/
+  border: 5px solid red;
+
+  /*alteracoes*/
+  display: flex;
+  align-items: center;
 }
 
 .profile-image {
@@ -46,3 +53,27 @@ a {
 ul {
   list-style-type: none;
 }
+
+.parte-direita {
+  display: flex;
+  justify-content: right;
+
+  margin: 0;
+  padding: 0;
+  gap: 8px;
+
+  /*temporario*/
+  border: 5px solid green;
+}
+
+.links {
+  display: flex;
+
+  margin: 0;
+  padding: 0;
+  gap: 8px;
+
+  /*temporario*/
+  border: 5px solid green;
+}
+
