--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,11 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+
+  display: flex;
+  justify-content: center;
+
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +28,12 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.todos-elementos {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  gap: 52px;
 }
