--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+
 }
 
 img {
@@ -10,6 +12,10 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+
+  /*display: flex;*/
+  /*justify-content: center;*/
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +29,14 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.todas-plantas {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.planta {
+  max-width: 200px;
 }
