exc 5. padding adicionado.

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -22,6 +22,8 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+
+  padding: 16px;
 }
 
 .icon {
@@ -80,8 +82,8 @@ button.cancel {
   font-size: 18px;
 }
 
-.botoes, .header, .text {
-  margin-bottom: 15px;
+.header, .text {
+  /*margin-bottom: 15px;*/
 }
 
 .icones {
