--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -22,6 +22,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+
+  padding-left: 20px;
+  padding-right: 10px;
 }
 
 .icon {
@@ -71,7 +74,7 @@ button.cancel {
 }
 
 .escrita, .botoes {
-  margin-left: 70px;
+  margin-left: 60px;
 }
 
 .header {
@@ -80,8 +83,12 @@ button.cancel {
   font-size: 18px;
 }
 
-.botoes, .header, .text {
+.botoes, .header {
   margin-bottom: 10px;
+}
+
+.text {
+  margin-bottom: 15px;
 }
 
 .icones {
@@ -98,4 +105,8 @@ button.cancel {
   position: absolute;
   bottom: -60px;
   left: 10px;
+}
+
+.botoes {
+  padding-bottom: 4px;
 }
