--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -36,17 +36,27 @@ a:link, a:visited  {
 
 .footer {
   display: flex;
-  border: 5px solid green;
+  /*border: 5px solid green;*/
   background-color: rgb(238, 238, 238);
 
-  margin-top: 285px;
+  margin-top: 292px;
 
-  justify-content: center;
-  gap: 1200px;
+  justify-content: space-around;
 }
 
 .footer .right-links, .footer .left-links {
   display: flex;
   gap: 16px;
+
+  padding: 8px;
+
+
+  border: 5px solid red;
 }
 
+.footer .right-links {
+  display: flex;
+
+  text-align: center;
+  /*justify-content: right;*/
+}
