--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -40,6 +40,7 @@ a:link, a:visited  {
   background-color: rgb(238, 238, 238);
 
   margin-top: 292px;
+  gap: 1255px;
 
   justify-content: space-around;
 }
@@ -49,9 +50,9 @@ a:link, a:visited  {
   gap: 16px;
 
   padding: 8px;
+  margin: 8px;
 
-
-  border: 5px solid red;
+  /*border: 5px solid red;*/
 }
 
 .footer .right-links {
