header alinhado de acordo com o design

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -47,6 +47,10 @@ a:link, a:visited  {
   gap: 1254px;
 }
 
+.header {
+  gap: 1312px;
+}
+
 .right-links, .left-links {
   display: flex;
   gap: 16px;
