conteudo centralizado, mas o footer acabou desaparecendo

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -70,5 +70,12 @@ a:link, a:visited  {
 
 .content {
   text-align: center;
-  
+}
+
+#logo, .input {
+  margin-bottom: 12px;
+}
+
+#logo {
+  margin-top: 162px;
 }
