--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,9 +5,6 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
-
-  display: flex;
-  flex-direction: column;
 }
 
 img {
@@ -28,21 +25,12 @@ input {
   width: 400px;
 }
 
-body {
+ul {
   display: flex;
-  flex-direction: column;
-}
+  list-style: none;
 
-button {
-  padding: 8px 16px;
-}
-
-.content {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  margin: 0;
+  padding: 0;
   gap: 16px;
 }
 
@@ -51,21 +39,31 @@ a {
   text-decoration: none;
 }
 
-.header,
-.footer {
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.footer, .header {
   display: flex;
   justify-content: space-between;
   padding: 16px;
 }
 
 .footer {
-  background: #eee;
+  background-color: #eeeeee;
 }
 
-ul {
+.content {
   display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  gap: 16px
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+button {
+  padding: 8px 16px;
 }
