--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -53,7 +53,7 @@ body {
 .container {
   display: flex;
   flex-flow: column wrap;
-  max-width: 300px;
+  /*max-width: 300px;*/
 
   gap: 16px;
   border: 5px solid red;
@@ -67,4 +67,8 @@ body {
 .side-car {
   display: flex;
   justify-content: space-between;
+}
+
+.sidebar {
+  flex-shrink: 0;
 }
