--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -5,7 +5,7 @@ body {
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /*justify-content: space-between;*/
 }
 
 .header {
@@ -27,6 +27,8 @@ body {
 
   display: flex;
   padding: 30px;
+
+  flex: auto;
 }
 
 .card {
@@ -34,7 +36,6 @@ body {
   box-shadow: 2px 4px 16px rgba(0, 0, 0, .06);
   border-radius: 4px;
 }
-
 
 .header {
   display: flex;
@@ -52,23 +53,41 @@ body {
 
 .container {
   display: flex;
-  flex-flow: column wrap;
+  flex-wrap: wrap;
   /*max-width: 300px;*/
 
-  gap: 16px;
-  border: 5px solid red;
+  gap: 32px;
+  padding: 48px;
 }
 
 .card {
-  display: flex;
   padding: 16px;
+  width: 300px;
+  height: 147px;
+
 }
 
 .side-car {
   display: flex;
-  justify-content: space-between;
+  /*justify-content: space-between;*/
+  row-gap: 100px;
+  flex: auto;
+
 }
 
 .sidebar {
   flex-shrink: 0;
+  padding: 16px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  font-size: 24px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
